rtic/ui/task-reference-in-spawn.stderr
error[E0521]: borrowed data escapes outside of function
  --> ui/task-reference-in-spawn.rs:3:1
   |
 3 | #[rtic::app(device = lm3s6965, dispatchers = [SSI0, QEI0, GPIOA])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | `_0` is a reference that is only valid in the function body
   | `_0` escapes the function body here
   | argument requires that `'1` must outlive `'static`
...
26 |     async fn high_prio_print(_: high_prio_print::Context, mut_ref: &mut usize) {
   |                                                                    - let's call the lifetime of this reference `'1`
   |
   = note: this error originates in the attribute macro `rtic::app` (in Nightly builds, run with -Z macro-backtrace for more info)
